# crm_broker_fastapi

./: .gitignore  README.md  alembic.ini  backup_postgres.py  bugs.txt  integr ts.txt  logging.conf  platform db.txt  pyproject.toml  requirements.txt  rev.txt  sample_db.sqlite  structure.txt  tsks.txt
alembic/: env.py
alembic/versions/: 03464fed874b_closedat_datetime_fix.py  1315168a4dd1_init.py  f169eaf82ec6_add_transaction_model.py
src/: __init__.py  api.py  app.py  config.py  fields.py  models.py  platfrom_integration.py  provider.py  schemas.py  seed_database.py  services.py  views.py
src/api/database/: router.py  services.py
src/api/pt_webhook/: router.py  schemas.py  services.py
src/api/services/: api.py  services.py
src/api/v1/: api.py  schemas.py  services.py
src/templates/: client_list_template.html  clients_detail.html  employee_list_template.html
starlette_admin/: auth.py  base.py  fields.py  helpers.py  views.py
starlette_admin/contrib/sqla/: helpers.py  view.py
starlette_admin/statics/js/: list.js  symbols.js
starlette_admin/templates/: client_list_template.html  clients_detail.html  detail.html  detail_order.html  edit_order.html  layout.html  list_order.html  login.html  trader_detail.html  trader_list.html
starlette_admin/templates/displays/: affiliate.html  emailcopy.html  lead.html  lead_compact.html  lead_with_comments.html  note.html  notes.html  notes_wrapper.html  order.html  phone.html  relation.html  responsible.html  trader.html  transaction.html
static/js/: custom_render.js
tests/: test_prod.py
(+2 files in other folders)
