[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Proprietary License. All Rights Reserved"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
starlette-admin = { git = "https://github.com/Ilya-Green/starlette-admin.git", rev = "aa7574d335fa151bfebaf6807e46017dc8301545" }
sentry-sdk = {extras = ["fastapi"], version = "^1.38.0"}
gunicorn = "^21.2.0"
sqlmodel = "0.0.8"
python-dotenv = "^1.0.0"
itsdangerous = "^2.1.2"
email-validator = "1.3.1"
requests = "^2.31.0"
aiohttp = "^3.9.1"
babel = "2.12.1"
uvicorn = "^0.24.0.post1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
